[gd_scene load_steps=8 format=3 uid="uid://dhrrdjnf1ij6i"]

[ext_resource type="Texture2D" uid="uid://c6h7gcko75xlw" path="res://Assets/UI/Story.png" id="1_dbs0r"]
[ext_resource type="Script" path="res://Scenes/Levels/Node.gd" id="2_3ohky"]
[ext_resource type="AudioStream" uid="uid://v4cmoub6oo5t" path="res://Assets/SFX/Story.mp3" id="2_fc0fq"]

[sub_resource type="Animation" id="Animation_m010u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_icbne"]
resource_name = "FAde"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tbtfd"]
resource_name = "FAde_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mgvdw"]
_data = {
"FAde": SubResource("Animation_icbne"),
"FAde_in": SubResource("Animation_tbtfd"),
"RESET": SubResource("Animation_m010u")
}

[node name="Intro Story" type="Node2D"]
position = Vector2(335, 267)
scale = Vector2(0.531, 0.531)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1013.0
offset_top = -569.0
offset_right = 2902.0
offset_bottom = 1475.0
color = Color(0, 0, 0, 1)

[node name="Story" type="Sprite2D" parent="."]
position = Vector2(1066, 453)
texture = ExtResource("1_dbs0r")

[node name="Node" type="Node" parent="Story"]
script = ExtResource("2_3ohky")

[node name="Label" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 738.0
offset_top = 853.0
offset_right = 495.8
offset_bottom = 869.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "Long Long ago "

[node name="Label2" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 404.0
offset_top = 856.0
offset_right = 697.8
offset_bottom = 872.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "A cruel and evil rain yokai descended from the heavens"

[node name="Label3" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 445.0
offset_top = 858.0
offset_right = 738.8
offset_bottom = 874.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "He sought to flood the earth for thousands of years "

[node name="Label4" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 238.0
offset_top = 857.0
offset_right = 872.8
offset_bottom = 873.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "The samurai of the lands all fough with honor but it was all for naught "

[node name="Label5" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 239.0
offset_top = 856.0
offset_right = 873.8
offset_bottom = 872.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "The samurai of the lands all fought with honor but it was all for naught "

[node name="Label6" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 646.0
offset_top = 856.0
offset_right = 1280.8
offset_bottom = 872.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "All hope seemed lost"

[node name="Label7" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 426.0
offset_top = 854.0
offset_right = 1060.8
offset_bottom = 870.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "Untill one lone shrine madien approached the yoaki"

[node name="Label8" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 329.0
offset_top = 854.0
offset_right = 963.8
offset_bottom = 870.64
theme_override_colors/font_color = Color(0.505882, 0.247059, 0.298039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "\"Foul yokai of the skies I demand you leave our people alone!\""

[node name="Label9" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 152.0
offset_top = 853.0
offset_right = 786.8
offset_bottom = 869.64
theme_override_colors/font_color = Color(0.25098, 0.329412, 0.545098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "\"Hahaha..Your lands bravest couldn't stop me what makes you think you can\""

[node name="Label10" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 272.0
offset_top = 851.0
offset_right = 906.8
offset_bottom = 867.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "The young shrine maiden started to chant on her sacred beads a prayer "

[node name="Label11" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 245.0
offset_top = 851.0
offset_right = 879.8
offset_bottom = 867.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "The heavens ripped open and light came down pulling the yokai back up"

[node name="Label12" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 323.0
offset_top = 851.0
offset_right = 957.8
offset_bottom = 867.64
theme_override_colors/font_color = Color(0.25098, 0.329412, 0.545098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "\"Curse you foul woman these lights will not hold me forever\""

[node name="Label13" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 86.0
offset_top = 857.0
offset_right = 720.8
offset_bottom = 873.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "The Yokai took one last swing before being wisked away back to the heavens "

[node name="Label14" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 69.0
offset_top = 849.0
offset_right = 703.8
offset_bottom = 865.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "He hit the maiden and  her scared beads scattered all over as she fell over"

[node name="Label15" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 122.0
offset_top = 851.0
offset_right = 756.8
offset_bottom = 867.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "She was left there dying and the gods came to her impressed by her bravery "

[node name="Label16" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 90.0
offset_top = 855.0
offset_right = 724.8
offset_bottom = 871.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "gave her the ability to reincarnate so she can stop the yokai for when he breaks free "

[node name="Label17" type="Label" parent="Story/Node"]
visible = false
anchors_preset = -1
anchor_right = 0.85
anchor_bottom = 0.195
offset_left = 603.0
offset_top = 842.0
offset_right = 1237.8
offset_bottom = 858.64
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 37
text = "Now seems to be that time "

[node name="AnimationPlayer" type="AnimationPlayer" parent="Story"]
libraries = {
"": SubResource("AnimationLibrary_mgvdw")
}

[node name="StoryMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fc0fq")
autoplay = true
bus = &"Music"

[node name="Button" type="Button" parent="."]
offset_left = -559.322
offset_top = 1116.76
offset_right = -519.322
offset_bottom = 1147.76
scale = Vector2(3.068, 3.068)
text = "skip"
flat = true

[connection signal="pressed" from="Button" to="Story/Node" method="_on_button_pressed"]
